--- a/src/content/docs/convenios/convenio-1979.mdx
+++ b/src/content/docs/convenios/convenio-1979.mdx
@@ -74,39 +74,39 @@ Las percepciones económicas de los trabajadores que pres tan sus servicios en "
 
 ##### Percepciones Salariales
 
-8.1 Salario Base
+- 8.1 Salario Base
 
-8.2 Complementos personales:
+- 8.2 Complementos personales:
 
-8.2.1 Antigüedad
+    - 8.2.1 Antigüedad
 
-8.2.2 Plus Convenio
+    - 8.2.2 Plus Convenio
 
-8.2.3 Pluses especiales de antigüedad
+    - 8.2.3 Pluses especiales de antigüedad
 
-8.2.4 Condiciones particulares, si las hubiere.
+    - 8.2.4 Condiciones particulares, si las hubiere.
 
-8.3 Plus de Trabajo nocturno.
+- 8.3 Plus de Trabajo nocturno.
 
-8.4 Complementos por calidad o cantidad de trabajo.
+- 8.4 Complementos por calidad o cantidad de trabajo.
 
-8.4.1 Horas extras
+    - 8.4.1 Horas extras
 
-8.4.2 Retribución especial de domingos y festivos.
+    - 8.4.2 Retribución especial de domingos y festivos.
 
-8.4.3 Primas o incentivos en general, si los hubiere.
+    - 8.4.3 Primas o incentivos en general, si los hubiere.
 
-8.5 Complementos de vencimiento periódico superior al mes:
+- 8.5 Complementos de vencimiento periódico superior al mes:
 
-8.5.1 Gratificaciones extraordinarias reglamentarias.
+    - 8.5.1 Gratificaciones extraordinarias reglamentarias.
 
-8.5.2 Gratificaciones extraordinarias especiales.
+    - 8.5.2 Gratificaciones extraordinarias especiales.
 
 ##### Percepciones no Salariales
 
-8.6 Ayuda por incapacidad laboral transitoria, derivada de enfermedad o accidente, sea o no laboral.
+- 8.6 Ayuda por incapacidad laboral transitoria, derivada de enfermedad o accidente, sea o no laboral.
 
-8.7 Otras ayudas, en general.
+- 8.7 Otras ayudas, en general.
 
 #### ARTÍCULO 9.- Salario Base y Plus Convenio.
 
@@ -186,13 +186,13 @@ Como consecuencia anterior y a fin de estimular debidamente la productividad, re
 
 La percepción de este complemento, se condicionará a las siguientes normas:
 
-1ª - Se percibirá por días efectivamente trabajados.
+- 1ª - Se percibirá por días efectivamente trabajados.
 
-2ª - A este único fín se entenderá como jornada completa aquella que suponga más de la mitad de la jornada día.
+- 2ª - A este único fín se entenderá como jornada completa aquella que suponga más de la mitad de la jornada día.
 
-3ª - Únicamente, a efectos de un mejor cálculo de este complemento, el descuento se aplicará al resultante de dividir el complemento por 30 días.
+- 3ª - Únicamente, a efectos de un mejor cálculo de este complemento, el descuento se aplicará al resultante de dividir el complemento por 30 días.
 
-4ª - Este complemento no podrá ser invocado para la modificación de la estructura, forma y funcionamiento de cualquiera de los incentivos existentes en la Empresa.
+- 4ª - Este complemento no podrá ser invocado para la modificación de la estructura, forma y funcionamiento de cualquiera de los incentivos existentes en la Empresa.
 
 #### ARTÍCULO 21.- Dietas.
 
@@ -236,26 +236,26 @@ Se establece, en todos los casos anteriormente descritos excepto en la salida e 
 
 #### ARTÍCULO 24 BIS.- Exclusiones del régimen de la jornada normal de trabajo.
 
-1º - Quedan excluidos del régimen de jornada normal, los porteros, guardas y vigilantes que disfruten de casa-habitación, con zona limitada de vigilancia y siempre que no se les exija una vigilancia constante.
+- 1º - Quedan excluidos del régimen de jornada normal, los porteros, guardas y vigilantes que disfruten de casa-habitación, con zona limitada de vigilancia y siempre que no se les exija una vigilancia constante.
 
-2º - En cuanto a los porteros, guardas y vigilantes no comprendidos en el caso que antecede, podrán trabajar hasta el máximo de setenta y dos horas (72 h.) a la semana, abonándoseles como extraordinarias las que excedan de la jornada de que se trate, según lo prevenido en los artículos 23 y 24 de este convenio.
+- 2º - En cuanto a los porteros, guardas y vigilantes no comprendidos en el caso que antecede, podrán trabajar hasta el máximo de setenta y dos horas (72 h.) a la semana, abonándoseles como extraordinarias las que excedan de la jornada de que se trate, según lo prevenido en los artículos 23 y 24 de este convenio.
 
-3º - En el caso de los trabajadores cuyas actividades consistan en poner en marcha o cierre el trabajo de los demás, se estará a lo dispuesto en las vigentes disposiciones sobre jornada.
+- 3º - En el caso de los trabajadores cuyas actividades consistan en poner en marcha o cierre el trabajo de los demás, se estará a lo dispuesto en las vigentes disposiciones sobre jornada.
 
-4º - El personal de distribución y reparto, mientras esté adscrito a estos servicios, queda excluido del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta y reparto, con las que se compensan las posibles prolongaciones de jornada y su función de distribución y venta.
+- 4º - El personal de distribución y reparto, mientras esté adscrito a estos servicios, queda excluido del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta y reparto, con las que se compensan las posibles prolongaciones de jornada y su función de distribución y venta.
 
-5º - Los Inspectores comerciales (de venta y reparto), en tanto estén adscritos a estos servicios, quedarán excluidos del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta, con las que, entre otros conceptos, se compensan, las posibles prolongaciones de jornada que puedan producirse.
+- 5º - Los Inspectores comerciales (de venta y reparto), en tanto estén adscritos a estos servicios, quedarán excluidos del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta, con las que, entre otros conceptos, se compensan, las posibles prolongaciones de jornada que puedan producirse.
 
 ## CAPÍTULO III
 ### DISPOSICIONES VARIAS
 #### ARTÍCULO 25.
 Para ingresar en la Empresa como trabajador fijo, será necesario, cumplir los requisitos tipificados en la legislación vigente al respecto y, además, los siguientes:
 
-a) Solicitar el ingreso mediante el formulario establecido por la Empresa.
+- a) Solicitar el ingreso mediante el formulario establecido por la Empresa.
 
-b) Someterse a examen médico y pruebas sicotécnicas o- profesionales que la Empresa considere convenientes, de acuerdo con la categoría y clase de trabajo a desempeñar.
+- b) Someterse a examen médico y pruebas sicotécnicas o- profesionales que la Empresa considere convenientes, de acuerdo con la categoría y clase de trabajo a desempeñar.
 
-c) Presentar los documentos requeridos por la Empresa, una vez superadas satisfactoriamente las pruebas.
+- c) Presentar los documentos requeridos por la Empresa, una vez superadas satisfactoriamente las pruebas.
 
 Una vez producido el ingreso del nuevo personal, el Comité de Empresa será informado de ello.
 
@@ -273,21 +273,21 @@ En cuadro anexo se establece un sistema de clasificación profesional.
 #### ARTÍCULO 27.- Licencias con sueldo.
 Las Empresas concederán licencias con sueldo a sus trabajadores fijos en los casos siguientes y de la duración que se indica:
 
-a) Quince días por causa de matrimonio del trabajador.
+- a) Quince días por causa de matrimonio del trabajador.
 
-b) Tres días por alumbramiento de esposa o nacimiento de hijo.
+- b) Tres días por alumbramiento de esposa o nacimiento de hijo.
 
-c) Cuatro días por defunción de esposa, hijos, padres, padres políticos o hermanos del trabajador.
+- c) Cuatro días por defunción de esposa, hijos, padres, padres políticos o hermanos del trabajador.
 
-d) Dos días por defunción de abuelos, nietos, cuñados, o hijos políticos del trabajador.
+- d) Dos días por defunción de abuelos, nietos, cuñados, o hijos políticos del trabajador.
 
-e) Hasta tres días por operación quirúrgica mayor o enfermedad grave de esposa, hijos, padres, padres políticos, nietos y hermanos del trabajador.
+- e) Hasta tres días por operación quirúrgica mayor o enfermedad grave de esposa, hijos, padres, padres políticos, nietos y hermanos del trabajador.
 
-f) Por el tiempo indispensable cuando los trabajadores deban cumplir algún deber de carácter público impuesto por la Ley o disposición administrativa.
+- f) Por el tiempo indispensable cuando los trabajadores deban cumplir algún deber de carácter público impuesto por la Ley o disposición administrativa.
 
-g) Un día por matrimonio de padre y madre, hijos, herma nos o comuniones del hijo del trabajador.
+- g) Un día por matrimonio de padre y madre, hijos, herma nos o comuniones del hijo del trabajador.
 
-h) Dos días por traslado de domicilio del trabajador.
+- h) Dos días por traslado de domicilio del trabajador.
 
 En todo caso, se entiende que los días a que se hace referencia en este artículo son días naturales. Si la localidad en que suceden los hechos que den origen a las licencias anteriormente mencionadas estuviese ubicada fuera de la provincia de Madrid, los plazos podrán ampliarse hasta dos días naturales más.
 
@@ -346,9 +346,9 @@ A efectos de facilitar la adquisición de viviendas sujetas al régimen de prote
 
 Los miembros del Comité de Empresa, afectados por este Convenio, dispondrán de una reserva de hasta cuarenta horas mensuales en los siguientes casos:
 
-a) Asistencia a cualquier clase de reuniones a las que fuesen debidamente citados por las centrales sindicales u órganos de la administración, en atención a su condición de representantes de los trabajadores.
+- a) Asistencia a cualquier clase de reuniones a las que fuesen debidamente citados por las centrales sindicales u órganos de la administración, en atención a su condición de representantes de los trabajadores.
 
-b) Participación en seminarios, cursos o actividades de carácter formativo, promovidos por su respectiva central sindical, a los que fuesen convocados y citados expresamente para su capacitación; así como ac tos de gestión que deban realizar por razón de sus obligaciones específicas.
+- b) Participación en seminarios, cursos o actividades de carácter formativo, promovidos por su respectiva central sindical, a los que fuesen convocados y citados expresamente para su capacitación; así como ac tos de gestión que deban realizar por razón de sus obligaciones específicas.
 
 Con cargo a la reserva de horas anteriormente citada, los miembros del Comité de Empresa dispondrán de las facilidades necesarias para informar, durante la jornada laboral, a los trabajadores por ellos representados,- sobre asuntos de interés directo laboral. Dicha comunicación, que se regirá por las normas de absentismo vigentes en la Empresa, se efectuará de modo que no se perturbe, en absoluto, la normalidad del proceso productivo en cualquiera de los departamentos de la Empresa.
 
@@ -413,13 +413,13 @@ En todo lo relativo a la toxicidad, penosidad y peligrosidad en el trabajo, se e
 
 Para acogerse a los beneficios que se reglamentan con las presentes bases es necesario cumplir todas y cada una de las siguientes condiciones:
 
-1.1 Pertenecer a la plantilla de la Empresa, con un mínimo de diez años de servicios ininterrumpidos.
+- 1.1 Pertenecer a la plantilla de la Empresa, con un mínimo de diez años de servicios ininterrumpidos.
 
-1.2 Solicitar la jubilación voluntaria para el día mismo en que se cumplan los 65 - años de edad, con treinta días de antelación, como mínimo.
+- 1.2 Solicitar la jubilación voluntaria para el día mismo en que se cumplan los 65 - años de edad, con treinta días de antelación, como mínimo.
 
-1.3 Solicitar, igualmente, la pensión de jubilación a la Mutualidad Laboral, así como el subsidio de vejez, si tuviera derecho.
+- 1.3 Solicitar, igualmente, la pensión de jubilación a la Mutualidad Laboral, así como el subsidio de vejez, si tuviera derecho.
 
-1.4 Jubilarse en la fecha solicitada.
+- 1.4 Jubilarse en la fecha solicitada.
 
 ##### Base 2.- Beneficios que se conceden.
 
@@ -437,13 +437,13 @@ Se trata de un complemento que, sumado a la pensión anual de jubilación que te
 
 Las percepciones brutas correspondientes a los doce meses anteriores a la jubilación, que servirán de base- para la determinación del complemento de la - pensión, serán única y exclusivamente las siguientes:
 
-3.1 Salario Base
+- 3.1 Salario Base
 
-3.2 Complementos por antigüedad
+- 3.2 Complementos por antigüedad
 
-3.3 Plus de Convenio
+- 3.3 Plus de Convenio
 
-3.4 Gratificaciones extraordinarias
+- 3.4 Gratificaciones extraordinarias
 
 No se tendrán en cuenta, por consiguiente, las horas extraordinarias, pluses por trabajos nocturnos, penosos, tóxicos o peligrosos, dietas o compensaciones análogas, primas, plus familiar etc.
 
@@ -480,29 +480,29 @@ Las presentes normas están en vigor desde el día 1º de Enero de 1970 a todos 
 
 Deberá encontrarse, en el momento de su fallecimiento, en algunas de las siguientes situaciones:
 
-11.1 Estar percibiendo de la Empresa la pensión complementaria de jubilación.
+- 11.1 Estar percibiendo de la Empresa la pensión complementaria de jubilación.
 
-11.2 Pertenecer a la plantilla de la Empresa.
+- 11.2 Pertenecer a la plantilla de la Empresa.
 
 ##### Base 12. Condiciones del beneficiario.
 
 Deberá reunir alguno de los siguientes requisitos:
 
-12.1 Haber contraído nupcias con una antelación mínima de tres años, respecto a la fecha del fallecimiento del causante.
+- 12.1 Haber contraído nupcias con una antelación mínima de tres años, respecto a la fecha del fallecimiento del causante.
 
-12.2 Estar conviviendo con el cónyuge causante ininterrumpidamente o, en caso de separación judicial, que la sentencia fir me le reconozca inocente u obligue al marido al pago de indemnización pecuniaria.
+- 12.2 Estar conviviendo con el cónyuge causante ininterrumpidamente o, en caso de separación judicial, que la sentencia fir me le reconozca inocente u obligue al marido al pago de indemnización pecuniaria.
 
-12.3 Estar incapacitada para el trabajo o tener a su cargo hijos del causante, con derecho a pensión de orfandad de la Seguridad Social.
+- 12.3 Estar incapacitada para el trabajo o tener a su cargo hijos del causante, con derecho a pensión de orfandad de la Seguridad Social.
 
-12.4 Si el beneficiario es varón, para tener derecho al complemento de pensión, deberá reunir los requisitos señalados en los apartados 12.1 y 12.2, y encontrarse al tiempo de fallecer su esposa, incapacitado para el trabajo y sostenido económicamente por ella. Se entenderá por incapacidad para el trabajo, en los casos a que se refieren los apartados 12.3 y 12.4, la de carácter permanente y absoluto que inhabilite por completo para toda profesión u oficio.
+- 12.4 Si el beneficiario es varón, para tener derecho al complemento de pensión, deberá reunir los requisitos señalados en los apartados 12.1 y 12.2, y encontrarse al tiempo de fallecer su esposa, incapacitado para el trabajo y sostenido económicamente por ella. Se entenderá por incapacidad para el trabajo, en los casos a que se refieren los apartados 12.3 y 12.4, la de carácter permanente y absoluto que inhabilite por completo para toda profesión u oficio.
 
 ##### Base 13.- Beneficios que se conceden.
 
 Son de dos clases, según la situación del causante en el momento del fallecimiento.
 
-13.1 Si el causante estaba percibiendo la pensión complementaria de jubilación, el beneficiario percibirá el 70% de esta en concepto de pensión de viudedad.
+- 13.1 Si el causante estaba percibiendo la pensión complementaria de jubilación, el beneficiario percibirá el 70% de esta en concepto de pensión de viudedad.
 
-13.2 Si el causante no fuera pensionista de jubilación y reuniera en el momento del fallecimiento los requisitos señalados en el apartado 12.2, el beneficiario tendrá derecho a una pensión complementaria que, sumada a la que perciba de la Mutualidad Laboral, por el concepto de viudedad, ya que la que pudiera corresponderle por orfandad queda totalmente excluida, alcance los siguientes porcentajes de remuneraciones neta real, computada según se establece en la base 3ª.
+- 13.2 Si el causante no fuera pensionista de jubilación y reuniera en el momento del fallecimiento los requisitos señalados en el apartado 12.2, el beneficiario tendrá derecho a una pensión complementaria que, sumada a la que perciba de la Mutualidad Laboral, por el concepto de viudedad, ya que la que pudiera corresponderle por orfandad queda totalmente excluida, alcance los siguientes porcentajes de remuneraciones neta real, computada según se establece en la base 3ª.
 
 | Años de servicio a la empresa (cumplidos) | % que ha de alcanzarse entre la pensión de la Mutualidad y el complemento |
 |-------------------------------------------|---------------------------------------------------------------------------|
@@ -514,15 +514,15 @@ Son de dos clases, según la situación del causante en el momento del fallecimi
 
 Cesará el devengo de la pensión complementaria de viudedad por las siguientes causas:
 
-14.1 Por contraer nuevas nupcias o contraer estado religioso.
+- 14.1 Por contraer nuevas nupcias o contraer estado religioso.
 
-14.2 Pérdida o privación de la patria potestad en virtud de alguna de las causas previstas en los artículos 169 y 171 del Código Civil o ausencia que implique abandono de los hijos.
+- 14.2 Pérdida o privación de la patria potestad en virtud de alguna de las causas previstas en los artículos 169 y 171 del Código Civil o ausencia que implique abandono de los hijos.
 
-14.3 Observar una conducta deshonesta o inmoral.
+- 14.3 Observar una conducta deshonesta o inmoral.
 
-14.4 Cesar en la incapacidad, si la pensión se otorgó por esta causa, salvo en los casos que la recuperación tenga lugar después de cumplir 40 años la viudedad o 60 el viudo.
+- 14.4 Cesar en la incapacidad, si la pensión se otorgó por esta causa, salvo en los casos que la recuperación tenga lugar después de cumplir 40 años la viudedad o 60 el viudo.
 
-14.5 Por fallecimiento del beneficiario.
+- 14.5 Por fallecimiento del beneficiario.
 
 ##### Base 15.
 
