--- a/src/content/docs/convenios/convenio-1982.mdx
+++ b/src/content/docs/convenios/convenio-1982.mdx
@@ -72,7 +72,7 @@ De conformidad con lo establecido en la Ley 24/1972, de 21 de junio, en el Decre
 | Auxiliares Técnicos y Administrativos                    | 7      |
 | Oficiales 1ª Jefes de Equipo y Oficiales 1ª y 2ª Obreros | 8      |
 | Ayudantes y Auxiliares de 1ª Obreros                     | 9      |
-| Auxiliares de 2ª Obreros                                | 10     |
+| Auxiliares de 2ª Obreros                                 | 10     |
 | Mujeres de la limpieza                                   | 10     |
 | Aspirantes y aprendices de 3º y 4º año                   | 11     |
 | Aspirantes y aprendices de 1º y 2º año                   | 12     |
@@ -83,45 +83,45 @@ Las percepciones económicas de los trabajadores que prestan sus servicios en «
 
 ##### Percepciones salariales
 
-7.1. Salario base.
+- 7.1. Salario base.
 
-7.2. Complementos personales:
+- 7.2. Complementos personales:
 
-7.2.1. Antigüedad.
+    - 7.2.1. Antigüedad.
 
-7.2.2. Plus de Convenio.
+    - 7.2.2. Plus de Convenio.
 
-7.2.3. Pluses especiales de antigüedad.
+    - 7.2.3. Pluses especiales de antigüedad.
 
-7.2.4. Condiciones particulares, si las hubiere.
+    - 7.2.4. Condiciones particulares, si las hubiere.
 
-7.3. Complementos por calidad o cantidad de trabajo:
+- 7.3. Complementos por calidad o cantidad de trabajo:
 
-7.3.1. Horas extras.
+    - 7.3.1. Horas extras.
 
-7.3.2. Retribución especial de domingos y festivos.
+    - 7.3.2. Retribución especial de domingos y festivos.
 
-7.3.3. Primas o incentivos en general, si los hubiere.
+    - 7.3.3. Primas o incentivos en general, si los hubiere.
 
-7.3.4. Complemento por trabajo efectivo y continuado.
+    - 7.3.4. Complemento por trabajo efectivo y continuado.
 
-7.4. Complementos de puestos de trabajo:
+- 7.4. Complementos de puestos de trabajo:
 
-7.4.1. Plus de rotación.
+    - 7.4.1. Plus de rotación.
 
-7.4.2. Plus de trabajo nocturno.
+    - 7.4.2. Plus de trabajo nocturno.
 
-7.5. Complementos de vencimiento periódico superior al mes:
+- 7.5. Complementos de vencimiento periódico superior al mes:
 
-7.5.1. Gratificaciones extraordinarias reglamentarias.
+    - 7.5.1. Gratificaciones extraordinarias reglamentarias.
 
-7.5.2. Gratificaciones extraordinarias especiales.
+    - 7.5.2. Gratificaciones extraordinarias especiales.
 
 ##### Percepciones no salariales
 
-7.6. Ayuda por incapacidad laboral transitoria, derivada de enfermedad o accidente, sea o no laboral.
+- 7.6. Ayuda por incapacidad laboral transitoria, derivada de enfermedad o accidente, sea o no laboral.
 
-7.7. Otras ayudas, en general.
+- 7.7. Otras ayudas, en general.
 
 #### Artículo 8. Salario base y Plus Convenio.
 
@@ -215,10 +215,13 @@ La percepción de este complemento se condicionará a las siguientes
 normas:
 
 1. Se percibirá por días efectivamente trabajados.
+
 2. A este único fin se entenderá como jornada completa aquella que that suponga más de la mitad de la jornada día pactado.
+
 3. Únicamente, a efectos de un mejor cálculo de este complemento, el descuento se aplicará al resultante de dividir el complemento por treinta días.
-ror
+
 4. El personal del servicio de reparto, que haya sido declarado incapacitado por los servicios médicos y esté pendiente de acoplamiento en otro Departamento, percibirá el complemento de productividad.
+
 5. Este complemento no podrá ser invocado para la modificación de la estructura, forma y funcionamiento de cualquiera de los incentivos existentes en la Empresa.
 
 #### Artículo 19.
@@ -249,20 +252,31 @@ El régimen de trabajo para todas las secciones será de jornada completa y cont
 Respecto a las materias que comprende este enunciado, y en relación con las normas vigentes aplicables a las mismas, se pactan las siguientes particularidades que deberán interpretarse de conformidad con lo señalado en el artículo anterior:
 
 1. Los turnos de trabajo se iniciarán a las siete horas de la mañana doy finalizará el último de los de la tarde a las veintitrés horas. Las excepciones a estos horarios se reflejan en los cuadros horarios que se someten a la aprobación de la autoridad laboral con 2) esta fecha. Igualmente se someterán a la autoridad laboral las modificaciones posteriores que pudieran producirse por necesidades imperiosas del proceso de producción o por causa de fuerza mayor.
+
 2. Cada turno de trabajo tendrá una duración de ocho horas de trabajo efectivo y continuado.
+
 3. Cuando los turnos de trabajo deban efectuarse en sábado de conformidad con lo prevenido en el artículo anterior, serán de seis horas de trabajo efectivo y continuado.
+
 4. El personal sujeto a turnos, en tanto esté adscrito a la jornada de ocho horas de trabajo efectivo y continuado, devengará un complemento por compensación de los cuarenta y cinco minutos del tiempo de comida, que se abonará por jornada trabajada en turno de ocho horas efectivas y continuadas y será aplicable a pray las categorías y con las cuantías que figuran en las tablas que se adjuntan como anexo número 3. Únicamente, los turnos de noche que, durante el período de tiempo comprendido entre el 14 de junio al 11 de septiembre, realicen su jornada de ocho horas de trabajo efectivo y continuado de lunes a viernes, no devengarán dicho complemento. Este complemento se tipifica como un complemento por cantidad de trabajo cuya denominación será «complemento por trabajo bosh efectivo y continuado». Dicho complemento se percibirá por días efectivos trabajados. Si por absentismo no se realizase la mitad de la jornada completa pactada, no se percibirá dicho complemento. En consecuencia y en las condiciones anteriormente descritas en las semanas en las que se trabajen cinco días, la jornada será de cuarenta horas de trabajo efectivo y continuado, y en las semanas en las que se trabajen seis días la jornada será de cuarenta y seis horas de trabajo efectivo y continuado.
+
 5. Los horarios para los distintos turnos se empalmarán de tal forma que entre los mismos no existan tiempos muertos y quede en cualquier caso garantizado el relevo.
+
 6. El personal administrativo y subalterno con jornada de siete horas, en las semanas en que se trabajen los sábados, tendrá una jornada de cuarenta y dos horas semanales, a razón de siete horas y veinte minutos diarios, y el sábado, cinco horas y veinte 10 minutos. Durante el resto del año, la jornada será de treinta y cinco horas semanales, a razón de siete horas diarias de lunes a viernes.
+
 7. Siendo, en todo caso, los horarios de trabajo descritos anteriormente de trabajo efectivo y continuado, a efectos de control de puntualidad para todo el personal, éste fichará en los relojes de 05 decontrol de su sección, su entrada al puesto de trabajo a la hora en punto y su salida del mismo no antes de cinco minutos (5 m.) de la hora de finalización, quedando en todos los casos garantizado el relevo.
+
 8. Se establece, en todos los casos anteriormente descritos, una tolerancia máxima de puntualidad de treinta minutos (30 m.) mes, permitiéndose hasta dos faltas de puntualidad al mes de diez minutos (10 m.) y sancionándose toda falta superior o igual a quince minutos (15 m.).
+
 9. Asimismo, la Empresa entregará las listas de personal de mantenimiento en las distintas secciones de fábrica en que estas existan, indicando sus turnos, horarios y libranzas, etc.
 
 #### Artículo 23. Exclusiones del régimen de la jornada normal de trabajo.
 
 1. Quedan excluidos del régimen de jornada normal los porteros, guardas y vigilantes que disfruten de casa-habitación, con zona limitada de vigilancia y siempre que no se les exija una vigilancia constante.
+
 2. En el caso de los trabajadores cuyas actividades consistan en poner en marcha o cierre el trabajo de los demás, se estará a lo dispuesto en las vigentes disposiciones sobre jornada.
+
 3. El personal de distribución y reparto, mientras esté adscrito a estos servicios, queda excluido del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta y reparto, con las que se compensan las características inherentes al servicio del reparto.
+
 4. Los Inspectores comerciales (de venta y reparto), en tanto estén adscritos a estos servicios, quedarán excluidos del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta, con las que, entre otros conceptos, se compensan las características inherentes a los servicios de esta categoría.
 
 #### Artículo 24. Plus de rotación de tarde o noche.
@@ -284,11 +298,11 @@ Como los incrementos salariales pactados dan lugar a un incremento en los costos
 #### Artículo 26.
 Para ingresar en la Empresa como trabajador fijo será ingresar en la Empresa como trabajador fijo será necesario cumplir los requisitos tipificados en la legislación vigente al respecto y, además, los siguientes:
 
-a) Solicitar el ingreso mediante el formulario establecido por la Empresa.
+- a) Solicitar el ingreso mediante el formulario establecido por la Empresa.
 
-b) Someterse a examen médico y pruebas sicotécnicas o profesionales que la Empresa considere conveniente, de acuerdo con la categoría y clase de trabajo a desempeñar.
+- b) Someterse a examen médico y pruebas sicotécnicas o profesionales que la Empresa considere conveniente, de acuerdo con la categoría y clase de trabajo a desempeñar.
 
-c) Presentar los documentos requeridos por la Empresa una vez superadas satisfactoriamente las pruebas.
+- c) Presentar los documentos requeridos por la Empresa una vez superadas satisfactoriamente las pruebas.
 
 Una vez producido el ingreso del nuevo personal, el Comité de Empresa será informado de ello.
 
@@ -313,12 +327,19 @@ Todo aspirante tendrá derecho a revisar su examen con el Tribunal si no está d
 La Dirección de la Empresa redactará el escalafón del personal a su servicio, con separación de los grupos que lo integren, teniendo en cuenta, para la colocación en el mismo, los siguientes extremos:
 
 1. Grupo laboral.
+
 2. Categoría profesional.
+
 3. Orden de antigüedad en la categoría.
+
 4. Orden de puntuación, en su caso, en el examen de ascenso.
+
 5. Antigüedad en la categoría inmediata inferior.
+
 6. Antigüedad en el grupo laboral.
+
 7. Antigüedad en la Empresa.
+
 8. Fecha de nacimiento.
 
 La Dirección de la Empresa publicará anualmente en el mes de febrero, entregando copia al Comité de Empresa, el escalafón para conocimiento del personal, y el trabajador que se considere perjudicado podrá reclamar ante la misma sobre el lugar que le haya sido asignado. Caso de ser denegada su petición por la Dirección de la Empresa, podrá acudir ante la Delegación de Trabajo correspondiente en el plazo de diez días, formulando las alegaciones que estime oportunas.
@@ -327,21 +348,21 @@ La Dirección de la Empresa publicará anualmente en el mes de febrero, entregan
 
 Las Empresas concederán licencias con sueldos a sus trabajadores en los casos siguientes y de la duración que se indica:
 
-a) Quince días por causa de matrimonio del trabajador.
+- a) Quince días por causa de matrimonio del trabajador.
 
-b) Tres días por alumbramiento de esposa o nacimiento de hijo.
+- b) Tres días por alumbramiento de esposa o nacimiento de hijo.
 
-c) Cuatro días por defunción del cónyuge, hijos, padres, padres políticos o hermanos del trabajador.
+- c) Cuatro días por defunción del cónyuge, hijos, padres, padres políticos o hermanos del trabajador.
 
-d) Dos días por defunción de abuelos, abuelos políticos, nietos, tíos, tíos políticos, cuñados, o hijos políticos del trabajador.
+- d) Dos días por defunción de abuelos, abuelos políticos, nietos, tíos, tíos políticos, cuñados, o hijos políticos del trabajador.
 
-e) Hasta tres días por operación quirúrgica mayor o enfermedad grave del cónyuge, hijos, padres, padres políticos, nietos y hermanos del trabajador.
+- e) Hasta tres días por operación quirúrgica mayor o enfermedad grave del cónyuge, hijos, padres, padres políticos, nietos y hermanos del trabajador.
 
-f) Por el tiempo indispensable cuando los trabajadores deban cumplir algún deber de carácter público y personal impuesto por la Ley o disposición administrativa.
+- f) Por el tiempo indispensable cuando los trabajadores deban cumplir algún deber de carácter público y personal impuesto por la Ley o disposición administrativa.
 
-g) Un día por matrimonio de padre, madre, hijos, hermanos, hermanos políticos o comuniones del hijo del trabajador.
+- g) Un día por matrimonio de padre, madre, hijos, hermanos, hermanos políticos o comuniones del hijo del trabajador.
 
-h) Dos días por traslado de domicilio del trabajador.
+- h) Dos días por traslado de domicilio del trabajador.
 
 En todo caso, se entiende que los días a que se hace referencia en este artículo son días naturales. Si la localidad en que suceden los hechos que den origen a las licencias anteriormente mencionadas estuviese ubicada fuera de la provincia de Madrid, los plazos se ampliarán dos días naturales más.
 
@@ -354,7 +375,7 @@ El trabajador fijo que haya de incorporarse a filas durante el tiempo del servic
 #### Artículo 31. Seguro de vida, invalidez y accidentes de circulación.
 «MAHOU, S. A.», tiene suscrita una póliza colectiva para todo el personal fijo de plantilla de 1.000.000 de pesetas por asegurado, que se mantendrá durante la vigencia de este Convenio con las siguientes condiciones:
 
-A) Capital asegurado.
+- A) Capital asegurado.
 
 |                                     | Pesetas   |
 |-------------------------------------|-----------|
@@ -363,7 +384,7 @@ A) Capital asegurado.
 | Muerte por accidente                | 2.000.000 |
 | Muerte por accidente de circulación | 3.000.000 |
 
-B) Riesgos cubiertos y riesgos excluidos, según póliza actualmente
+- B) Riesgos cubiertos y riesgos excluidos, según póliza actualmente
 suscrita.
 
 #### Artículo 32. Mejora de la pensión de jubilación y viudedad.
@@ -494,9 +515,9 @@ Como es costumbre en la Empresa, el Servicio Médico facilitará a cada trabajad
 
 Los miembros del Comité de Empresa, afectados por este Convenio, dispondrán de una reserva de hasta cuarenta horas mensuales en los siguientes casos:
 
-a) Asistencia a cualquier clase de reuniones a las que fuesen debidamente citados por las centrales sindicales u órganos de la administración, en atención a su condición de representantes de los trabajadores.
+- a) Asistencia a cualquier clase de reuniones a las que fuesen debidamente citados por las centrales sindicales u órganos de la administración, en atención a su condición de representantes de los trabajadores.
 
-b) Participación en seminarios, cursos o actividades de carácter formativo, promovidos por su respectiva central sindical, a los que fuesen convocados y citados expresamente para su capacitación; así como actos de gestión que deban realizar por razón de sus obligaciones específicas.
+- b) Participación en seminarios, cursos o actividades de carácter formativo, promovidos por su respectiva central sindical, a los que fuesen convocados y citados expresamente para su capacitación; así como actos de gestión que deban realizar por razón de sus obligaciones específicas.
 
 Con cargo a la reserva de horas anteriormente citada, los miembros del Comité de Empresa dispondrán de las facilidades necesarias para informar, durante la jornada laboral, a los trabajadores por ellos representados, sobre asuntos de interés directo laboral. Dicha comunicación, que se regirá por las normas de absentismo vigentes en la Empresa, se efectuará de modo que no se perturbe, en absoluto, la normalidad del proceso productivo en cualquiera de los departamentos de la Empresa.
 
@@ -508,16 +529,17 @@ En la Empresa se pondrá a disposición de los miembros del Comité espacios vis
 
 Ambas partes, conscientes de la próxima elaboración de una normativa que regulará este tema y a fin de conseguir una mayor operatividad práctica, acuerdan, hasta tanto no se efectúe la publicación de la normativa indicada, lo siguiente:
 
-a) Reconocer las secciones sindicales de aquellas centrales sindicales que estén representadas en el Comité de Empresa.
+- a) Reconocer las secciones sindicales de aquellas centrales sindicales que estén representadas en el Comité de Empresa.
 
-b) Reconocer las secciones sindicales que, sin estar presentes en el Comité de Empresa, tengan un 10 por 100 como mínimo de afiliados, respecto al total de la plantilla. Dicha afiliación se demostrará fehacientemente.
+- b) Reconocer las secciones sindicales que, sin estar presentes en el Comité de Empresa, tengan un 10 por 100 como mínimo de afiliados, respecto al total de la plantilla. Dicha afiliación se demostrará fehacientemente.
 
-c) Reconocer un delegado por cada sección sindical reconocida, en las condiciones anteriores, cuya misión fundamental consistirá en ostentar la representación de la central o sindicato y ser medio de comunicación entre aquel y la Dirección de la Empresa.
+- c) Reconocer un delegado por cada sección sindical reconocida, en las condiciones anteriores, cuya misión fundamental consistirá en ostentar la representación de la central o sindicato y ser medio de comunicación entre aquel y la Dirección de la Empresa.
 
-d) El delegado del sindicato tendrá las mismas garantías que los miembros del Comité de Empresa, si bien a las reuniones que, en su caso, pueda asistir tendrá voz, pero no voto.
-En las mismas condiciones que los miembros del Comité de Empresa, dispondrá, el delegado representante de cada sección, de hasta cien horas al año.
+- d) El delegado del sindicato tendrá las mismas garantías que los miembros del Comité de Empresa, si bien a las reuniones que, en su caso, pueda asistir tendrá voz, pero no voto.
 
-e) El delegado de las secciones sindicales reconocidas podrá solicitar de la Empresa el descuento en nómina de las cuotas correspondientes a su central, descuento que ésta efectuará.
+    En las mismas condiciones que los miembros del Comité de Empresa, dispondrá, el delegado representante de cada sección, de hasta cien horas al año.
+
+- e) El delegado de las secciones sindicales reconocidas podrá solicitar de la Empresa el descuento en nómina de las cuotas correspondientes a su central, descuento que ésta efectuará.
 
 #### Artículo 51. Asambleas.
 
@@ -532,9 +554,13 @@ La Empresa arbitrará los medios necesarios, en la medida de sus posibilidades, 
 Las funciones de la Comisión mixta de interpretación son:
 
 1. Interpretación del convenio.
+
 2. Arbitraje de los problemas o cuestiones que le sean sometidos.
+
 3. Conciliación de los problemas colectivos.
+
 4. Vigilancia del cumplimiento de lo pactado.
+
 5. Otras actividades que ayuden a la eficacia práctica del convenio.
 
 *Presidente:* D. José Luis Borque Ortega.
@@ -619,13 +645,13 @@ El salario de las Limpiadoras se ha equiparado al del Auxiliar de 1ª obrero, si
 
 Para acogerse a los beneficios que se reglamentan con las presentes bases es necesario cumplir todas y cada una de las siguientes condiciones:
 
-1.1. Pertenecer a la plantilla de la Empresa, con un mínimo de diez años de servicio ininterrumpidos.
+- 1.1. Pertenecer a la plantilla de la Empresa, con un mínimo de diez años de servicio ininterrumpidos.
 
-1.2. Solicitar la jubilación voluntaria para el día mismo en que se cumplan los 65 años de edad, con treinta días de antelación como mínimo.
+- 1.2. Solicitar la jubilación voluntaria para el día mismo en que se cumplan los 65 años de edad, con treinta días de antelación como mínimo.
 
-1.3. Solicitar, igualmente, la pensión de jubilación a la Mutualidad Laboral, así como el subsidio de vejez, si tuviera derecho.
+- 1.3. Solicitar, igualmente, la pensión de jubilación a la Mutualidad Laboral, así como el subsidio de vejez, si tuviera derecho.
 
-1.4. Jubilarse en la fecha solicitada.
+- 1.4. Jubilarse en la fecha solicitada.
 
 ##### Base 2. Beneficios que se conceden.
 
@@ -645,13 +671,13 @@ Se trata de un complemento que, sumado a la pensión anual de jubilación que te
 
 Las percepciones brutas correspondientes a los doce meses anteriores a la jubilación, que servirán de base para la determinación del complemento de la pensión, serán única y exclusivamente las siguientes:
 
-3.1. Salario base.
+- 3.1. Salario base.
 
-3.2. Complementos por antigüedad.
+- 3.2. Complementos por antigüedad.
 
-3.3. Plus de Convenio.
+- 3.3. Plus de Convenio.
 
-3.4. Gratificaciones extraordinarias.
+- 3.4. Gratificaciones extraordinarias.
 
 No se tendrán en cuenta, por consiguiente, las horas extraordinarias, pluses por trabajos nocturnos, penosos, tóxicos o peligrosos, dietas o compensaciones análogas, primas, plus familiar, etc.
 
@@ -688,31 +714,31 @@ Dadas las ventajas que para el trabajador jubilado reportan las condiciones pact
 
 Deberá encontrarse, en el momento de su fallecimiento, en alguna de las siguientes situaciones:
 
-11.1. Estar percibiendo de la Empresa la pensión complementaria de jubilación.
+- 11.1. Estar percibiendo de la Empresa la pensión complementaria de jubilación.
 
-11.2. Pertenecer a la plantilla de la Empresa.
+- 11.2. Pertenecer a la plantilla de la Empresa.
 
 ##### Base 12. Condiciones del beneficiario.
 
 Deberá reunir alguno de los siguientes requisitos:
 
-12.1. Haber contraído nupcias con una antelación mínima de tres años, respecto a la fecha del fallecimiento del causante.
+- 12.1. Haber contraído nupcias con una antelación mínima de tres años, respecto a la fecha del fallecimiento del causante.
 
-12.2. Estar conviviendo con el cónyuge causante ininterrumpidamente o, en caso de separación judicial, que la sentencia firme le reconozca inocente u obligue al marido al pago de indemnización pecuniaria.
+- 12.2. Estar conviviendo con el cónyuge causante ininterrumpidamente o, en caso de separación judicial, que la sentencia firme le reconozca inocente u obligue al marido al pago de indemnización pecuniaria.
 
-12.3. Estar incapacitada para el ejercicio o tener a su cargo hijos del causante, con derecho a pensión de orfandad de la Seguridad Social.
+- 12.3. Estar incapacitada para el ejercicio o tener a su cargo hijos del causante, con derecho a pensión de orfandad de la Seguridad Social.
 
-12.4. Si el beneficiario es varón, para tener derecho al complemento de pensión deberá reunir los requisitos señalados en los apartados 13.1 y 13.2, y encontrarse al tiempo de fallecer su esposa incapacitado para el trabajo y sostenido económicamente por ella.
+- 12.4. Si el beneficiario es varón, para tener derecho al complemento de pensión deberá reunir los requisitos señalados en los apartados 13.1 y 13.2, y encontrarse al tiempo de fallecer su esposa incapacitado para el trabajo y sostenido económicamente por ella.
 
-Se entenderá por incapacidad para el trabajo, en los casos a que se refieren los apartados 13.3 y 13.4, la de carácter permanente y absoluto que inhabilite por completo para toda profesión u oficio.
+    Se entenderá por incapacidad para el trabajo, en los casos a que se refieren los apartados 13.3 y 13.4, la de carácter permanente y absoluto que inhabilite por completo para toda profesión u oficio.
 
 ##### Base 13. Beneficios que se conceden.
 
 Son de dos clases, según la situación del causante en el momento del fallecimiento.
 
-13.1. Si el causante estaba percibiendo la pensión complementaria de jubilación, el beneficiario percibirá el 70 por 100 de ésta en concepto de pensión de viudedad.
+- 13.1. Si el causante estaba percibiendo la pensión complementaria de jubilación, el beneficiario percibirá el 70 por 100 de ésta en concepto de pensión de viudedad.
 
-13.2. Si el causante no fuera pensionista de jubilación y reuniera en momento del fallecimiento los requisitos señalados en el apartado 13.2, el beneficiario tendrá derecho a una pensión complementaria que, sumada a la que perciba de la Mutualidad Laboral, por el concepto de viudedad, ya que la que pudiera corresponderle por orfandad queda totalmente excluida, alcance los siguientes porcentajes de remuneraciones brutas reales computadas según se establece en la base 3ª:
+- 13.2. Si el causante no fuera pensionista de jubilación y reuniera en momento del fallecimiento los requisitos señalados en el apartado 13.2, el beneficiario tendrá derecho a una pensión complementaria que, sumada a la que perciba de la Mutualidad Laboral, por el concepto de viudedad, ya que la que pudiera corresponderle por orfandad queda totalmente excluida, alcance los siguientes porcentajes de remuneraciones brutas reales computadas según se establece en la base 3ª:
 
 | Años de servicio a la Empresa (cumplidos) | % que ha de alcanzarse entre la pensión de la Mutualidad y el complemento |
 |-------------------------------------------|---------------------------------------------------------------------------|
@@ -724,15 +750,15 @@ Son de dos clases, según la situación del causante en el momento del fallecimi
 
 Cesará el devengo de la pensión complementaria de viudedad por las siguientes causas:
 
-14.1. Por contraer nuevas nupcias o contraer estado religioso.
+- 14.1. Por contraer nuevas nupcias o contraer estado religioso.
 
-14.2. Pérdida o privación de la patria potestad en virtud de alguna de las causas previstas en los artículos 169 y 171 del Código Civil o ausencia que implique abandono de los hijos.
+- 14.2. Pérdida o privación de la patria potestad en virtud de alguna de las causas previstas en los artículos 169 y 171 del Código Civil o ausencia que implique abandono de los hijos.
 
-14.3. Observar una conducta deshonesta o inmoral.
+- 14.3. Observar una conducta deshonesta o inmoral.
 
-14.4. Cesar en la incapacidad, si la pensión se otorgó por esta causa, salvo en los casos que la recuperación tenga lugar después de cumplir 40 años la viuda o 60 el viudo.
+- 14.4. Cesar en la incapacidad, si la pensión se otorgó por esta causa, salvo en los casos que la recuperación tenga lugar después de cumplir 40 años la viuda o 60 el viudo.
 
-14.5. Por fallecimiento del beneficiario.
+- 14.5. Por fallecimiento del beneficiario.
 
 ##### Base 15.
 
